--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^19.0.4",
     "autoprefixer": "^10.4.21",
     "chart.js": "^4.4.8",
+    "dotenv": "^16.5.0",
     "ethers": "^6.13.5",
     "graphql": "^16.10.0",
     "graphql-request": "^7.1.2",
