--- a/backend/package.json
+++ b/backend/package.json
@@ -12,20 +12,26 @@
     "stats": "node -e \"require('./scripts/database').getStats().then(stats => console.table(stats))\""
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "helmet": "^7.1.0",
     "dotenv": "^16.3.1",
-    "sqlite3": "^5.1.6",
-    "node-fetch": "^2.6.7",
+    "ethers": "^6.13.5",
+    "express": "^4.18.2",
     "graphql": "^16.10.0",
     "graphql-request": "^7.1.2",
-    "ethers": "^6.13.5"
+    "helmet": "^7.1.0",
+    "node-fetch": "^2.6.7",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
   },
-  "keywords": ["rmm", "api", "blockchain", "gnosis", "rates"],
+  "keywords": [
+    "rmm",
+    "api",
+    "blockchain",
+    "gnosis",
+    "rates"
+  ],
   "author": "",
   "license": "MIT"
-} 
+}
