--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.0.17",
+    "@graphprotocol/graph-ts": "^0.38.1",
     "@types/node": "^22.13.16",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
-    "autoprefixer": "^10.4.21",
     "chart.js": "^4.4.8",
     "dotenv": "^16.5.0",
     "ethers": "^6.13.5",
@@ -21,17 +20,19 @@
     "graphql-request": "^7.1.2",
     "html2canvas": "^1.4.1",
     "next": "^15.2.4",
-    "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
+    "recharts": "^3.1.0",
     "sqlite3": "^5.1.6",
-    "tailwindcss": "^4.0.17",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.8.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
-    "@types/jest": "^29.5.14"
+    "@types/jest": "^29.5.14",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6"
   }
 }
