--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,16 @@
-# Configuration des API Keys
-GNOSISSCAN_API_KEY=46B7CZCF8QGPDWN8QJR4YMV5KQEHGEUSYX
+# Configuration du serveur
+PORT=3001
+NODE_ENV=development
 
-# Configuration TheGraph (optionnel)
-# THEGRAPH_API_KEY=
+# Clés API (à remplacer par vos vraies clés)
+THEGRAPH_API_KEY=your_thegraph_api_key_here
+GNOSISSCAN_API_KEY=your_gnosisscan_api_key_here
+
+# Configuration CORS
+CORS_ORIGIN=http://localhost:3000
+
+# Configuration de la base de données
+DB_PATH=./data/rates.db
+
+# Configuration des logs
+LOG_LEVEL=info 
