--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_BACKEND_URL=http://localhost:3001
+NEXT_PUBLIC_FRONTEND_URL=http://localhost:3000
 NEXT_PUBLIC_GNOSISSCAN_API_KEY=46B7CZCF8QGPDWN8QJR4YMV5KQEHGEUSYX
