--- a/backend/env.example
+++ b/backend/env.example
@@ -1,8 +1,12 @@
+# ========================================
+# BACKEND APIGAINORLOSS - Variables d'environnement
+# ========================================
+
 # Configuration du serveur
-PORT=3001
+PORT=5000
 NODE_ENV=development
 
-# Clés API (à remplacer par vos vraies clés)
+# Clés API privées (côté serveur uniquement)
 THEGRAPH_API_KEY=your_thegraph_api_key_here
 GNOSISSCAN_API_KEY=your_gnosisscan_api_key_here
 
@@ -13,4 +17,13 @@ CORS_ORIGIN=http://localhost:3000
 DB_PATH=./data/rates.db
 
 # Configuration des logs
-LOG_LEVEL=info 
+LOG_LEVEL=info
+
+# Configuration de sécurité
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
+
+# En production, modifiez :
+# NODE_ENV=production
+# PORT=5000
+# CORS_ORIGIN=https://votre-domaine.com 
