--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test-frontend": "node scripts/test-frontend-integration.js"
   },
   "dependencies": {
     "@types/node": "^22.13.16",
