--- a/scripts/package.json
+++ b/scripts/package.json
@@ -5,8 +5,10 @@
   "main": "init-rates.js",
   "scripts": {
     "init": "node init-rates.js",
+    "init-transactions": "node init-transactions.js",
     "update": "node update-rates.js",
-    "stats": "node -e \"require('./database').getStats().then(stats => console.table(stats))\""
+    "stats": "node -e \"require('./database').getStats().then(stats => console.table(stats))\"",
+    "stats-transactions": "node -e \"require('./init-transactions').getDatabaseStats().then(stats => console.table(stats))\""
   },
   "dependencies": {
     "sqlite3": "^5.1.6",
