--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,8 @@
     "test-transfer-logic": "node scripts/test-transfer-logic.js",
     "generate-curl": "node scripts/generate-moralis-curl.js",
     "test-complete-flow": "node scripts/test-complete-flow.js",
-    "test-balances": "node scripts/test-balances-performance.js"
+    "test-balances": "node scripts/test-balances-performance.js",
+    "test-env": "node scripts/test-env.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
