fix: V2 OK on frontend, now add transactions

--- a/backend/env.example
+++ b/backend/env.example
@@ -10,6 +10,8 @@ NODE_ENV=development
 THEGRAPH_API_KEY=your_thegraph_api_key_here
 GNOSISSCAN_API_KEY=your_gnosisscan_api_key_here
 
+# Configuration RPC Gnosis
+GNOSIS_RPC_URL=https://rpc.gnosischain.com/
 
 # Configuration CORS
 CORS_ORIGIN=http://localhost:3000
