chore: rmv code

--- a/backend/env.example
+++ b/backend/env.example
@@ -1,29 +1,22 @@
-# ========================================
-# BACKEND APIGAINORLOSS - Variables d'environnement
-# ========================================
+# =======================
+# BACKEND APIGAINORLOSS
+# =======================
 
-# Configuration du serveur
+# server
 PORT=5000
 NODE_ENV=development
 
-# Clés API privées (côté serveur uniquement)
+# API key (server side)
 THEGRAPH_API_KEY=your_thegraph_api_key_here
 GNOSISSCAN_API_KEY=your_gnosisscan_api_key_here
 
-# Configuration RPC Gnosis
+# RPC Gnosis Configuration
 GNOSIS_RPC_URL=https://rpc.gnosischain.com/
 
-# Configuration CORS
+# CORS Configuration
 CORS_ORIGIN=http://localhost:3000
 
-# Configuration des logs
-LOG_LEVEL=info
 
-# Configuration de sécurité
-RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX_REQUESTS=100
-
-# En production, modifiez :
+# On prod :
 # NODE_ENV=production
-# PORT=5000
 # CORS_ORIGIN=https://votre-domaine.com 
